search result update

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -13,7 +13,7 @@
   </div>
   
   <div class="main-body">
-    <app-user-login-page></app-user-login-page>
+    <app-search-result></app-search-result>
   </div>
 </body>
 <footer>
