--- a/client/src/app/components/user-login-page.component.html
+++ b/client/src/app/components/user-login-page.component.html
@@ -82,7 +82,9 @@
 
 <ng-template #SignUpNow>
   <div class="col-5 d-flex justify-content-center">
-    <h1>Have No Account? <a (click)="signup()">Sign Up Now</a></h1>
+    <h1>Have No Account?</h1>
+    <br>
+    <h1><a (click)="signup()">Sign Up Now</a></h1>
   </div>
 </ng-template>
     
