--- a/client/src/app/components/place-details.component.html
+++ b/client/src/app/components/place-details.component.html
@@ -1,54 +1,100 @@
-<div>
-    <div>
-        <table>
-            <tr>
-                <td>
-                    <h2>{{placeDetails.name}}</h2>
-                </td>
-                <td>
-                    {{placeDetails.address}}
-                </td>
-                <td *ngIf="placeDetails.openNow; else closed">
-                    <p>Open</p>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div *ngFor="let o of placeDetails.opening_hours">
-                     <p>
-                         {{o}}
-                     </p>
+
+<div class="container mb-3">
+    <div class="row">
+        <div class="col-12">
+            <h1> {{placeDetails.name}}</h1>
+        </div>
+        <div class="col-12 h-40 w-100">
+            <img src="https://placehold.co/600x400" alt="">
+        </div>
+        <div class="col=12">
+            <br>
+            <h2>About</h2>
+            <div class="row">
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-6">
+                            <ul class="list-group list-group-flush">
+                                <!-- ADDRESS -->
+                                <li class="list-group-item">
+                                    {{placeDetails.address}}
+                                </li>
+                                <li class="list-group-item">
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M57.7 193l9.4 16.4c8.3 14.5 21.9 25.2 38 29.8L163 255.7c17.2 4.9 29 20.6 29 38.5v39.9c0 11 6.2 21 16 25.9s16 14.9 16 25.9v39c0 15.6 14.9 26.9 29.9 22.6c16.1-4.6 28.6-17.5 32.7-33.8l2.8-11.2c4.2-16.9 15.2-31.4 30.3-40l8.1-4.6c15-8.5 24.2-24.5 24.2-41.7v-8.3c0-12.7-5.1-24.9-14.1-33.9l-3.9-3.9c-9-9-21.2-14.1-33.9-14.1H257c-11.1 0-22.1-2.9-31.8-8.4l-34.5-19.7c-4.3-2.5-7.6-6.5-9.2-11.2c-3.2-9.6 1.1-20 10.2-24.5l5.9-3c6.6-3.3 14.3-3.9 21.3-1.5l23.2 7.7c8.2 2.7 17.2-.4 21.9-7.5c4.7-7 4.2-16.3-1.2-22.8l-13.6-16.3c-10-12-9.9-29.5 .3-41.3l15.7-18.3c8.8-10.3 10.2-25 3.5-36.7l-2.4-4.2c-3.5-.2-6.9-.3-10.4-.3C163.1 48 84.4 108.9 57.7 193zM464 256c0-36.8-9.6-71.4-26.4-101.5L412 164.8c-15.7 6.3-23.8 23.8-18.5 39.8l16.9 50.7c3.5 10.4 12 18.3 22.6 20.9l29.1 7.3c1.2-9 1.8-18.2 1.8-27.5zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256z"/></svg>
+                                    {{placeDetails.website}}
+                                </li>
+                                <li class="list-group-item">
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg>
+                                    {{placeDetails.phoneNo}}
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-6">
+                            <iframe
+                                width="500"
+                                height="350"
+                                style="border:1"
+                                loading="lazy"
+                                allowfullscreen
+                                referrerpolicy="no-referrer-when-downgrade"
+                                [src]='getGoogleMapUrl(placeDetails.placeId)|safe'>
+                            </iframe> 
+                        </div>
                     </div>
-                 </td>
-                 <td>
-                     price level: {{placeDetails.priceLevel}}
-                 </td>
-            </tr>
-        </table>
-    </div>
+                </div>
+                <div class="col-12">
+                    <br>
+                    <h2>Information</h2>
+                    <div class="col-4">
+                        <mat-list>
+                            <mat-list-item>
+                                <span matListItemTitle>Opening Hours</span>
+                                <span *ngFor="let o of placeDetails.opening_hours" matListItemLine>
+                                    {{o}}
+                                </span>
+                                
+                                <mat-icon>not_interested</mat-icon>
+                            </mat-list-item>
+                        </mat-list>
+                    </div>
+                </div>
+                <div class="col=4">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">
+                            Dine-In: <svg xmlns="http://www.w3.org/2000/svg" height="1.25em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM337 209L209 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L303 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"/></svg>
+                        </li>
+                        <li class="list-group-item">
+                            Delivery: <svg xmlns="http://www.w3.org/2000/svg" height="1.25em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM337 209L209 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L303 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"/></svg>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-8">
+            <h2>Reviews</h2>
+            <div class="container">
+                <div class="row" *ngFor="let r of placeDetails.reviews">
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-1">
+                                <img src="{{r.profileUrl}}" class="profile-pic">
+                            </div>
+                            <div class="col-2">
+                                <p>{{r.author}}</p>
+                            </div>
+                            <div class="col-2">
+                                {{r.time}}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <p>{{r.description}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 </div>
 
-<h3>Reviews</h3>
-<div *ngFor="let r of placeDetails.reviews">
-    <table>
-        <tr>
-            <td>
-                {{r.author}}
-            </td>
-            <td>
-                {{r.time}}
-            </td>
-            <td>
-                {{r.rating}}
-            </td>
-        </tr>
-        <tr>
-            <td>
-                {{r.description}}
-            </td>
-        </tr>
-    </table>
-</div>
 
 <ng-template #closed>
     <p>Closed</p>
