--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,4 +1,4 @@
-.body{
+body{
     display: flex;
     flex-direction: column;
 }
@@ -21,5 +21,5 @@
 }
 
 .main-body{
-    height: 90%;
+    height: auto;
 }
