--- a/client/src/app/components/search-result.component.css
+++ b/client/src/app/components/search-result.component.css
@@ -1,11 +1,30 @@
-body{
- display: flex;
- align-items: center;
- justify-content: center;
+.cardbody{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 45%;
+  overflow: auto;
+  height: 50%;
 }
 
-.list {
-    width: 100%;
-    height: 100%;
-    padding: 15px;
+.mycontainer{
+  display: flex;
+  justify-content: center;
+  padding-top: 5%;
+}
+
+.card-hover-effect {
+  transition: box-shadow 0.3s;
+}
+
+.card-hover-effect:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.card{
+  background-color: #FFFBF5;
+}
+
+.small-icon {
+  font-size: 14px;
 }
