--- a/client/src/app/components/search.component.html
+++ b/client/src/app/components/search.component.html
@@ -1,17 +1,29 @@
 <body>
   <div class="container">
-    <div class="row" >
-      <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div class="row d-flex justify-content-center">
+        <div class="col-3">
+          <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search Restaurant" formControlName="query">
+          </div>
+        </div>
         <div class="col-4">
-            <input type="text" class="search-input" formControlName="query">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Choose a location in Singapore" formControlName="location" [value]="selectedLoc? selectedLoc: ''">
+            <button type="button" class="btn btn-outline-secondary" (click)="displayLocation()">
+              <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
+            </button>
+            <button class="btn btn-outline-secondary">
+              <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M256 0c17.7 0 32 14.3 32 32V66.7C368.4 80.1 431.9 143.6 445.3 224H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H445.3C431.9 368.4 368.4 431.9 288 445.3V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V445.3C143.6 431.9 80.1 368.4 66.7 288H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H66.7C80.1 143.6 143.6 80.1 224 66.7V32c0-17.7 14.3-32 32-32zM128 256a128 128 0 1 0 256 0 128 128 0 1 0 -256 0zm128-80a80 80 0 1 1 0 160 80 80 0 1 1 0-160z"/></svg>
+            </button>
+          </div>
         </div>
-        <div class="col-8">
-            <input type="text" class="search-input" formControlName="location">
+        <div class="col-2">
+          <div class="mb-3">
+            <button type="submit" class="btn btn-light">Search</button>
+          </div>
         </div>
-        <div>
-          <button type="submit">Search</button>
-        </div>
-      </form>
-    </div>
-  </div>
+      </div>
+    </form>
+   </div>
 </body>
