--- a/client/src/app/components/place-details.component.css
+++ b/client/src/app/components/place-details.component.css
@@ -2,3 +2,11 @@
     height: 40px;
     width: 40px;
 }
+
+body{
+    background-color: whitesmoke;
+}
+
+.container{
+    background-color: white;
+}
