--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -12,7 +12,7 @@
     </div>
   </nav>  
   <div class="main-body">
-    <app-search-result></app-search-result>
+    <router-outlet></router-outlet>
   </div>
   <!-- <footer>
     my footer
