--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,10 @@
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mt-4">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light mt-4">
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">Home</a>
       
       <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn; else acc">
+      <!-- <ul class="navbar-nav ml-auto" *ngIf="false; else acc"> -->
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/login']">Sign up or Login</a>
         </li>
@@ -12,7 +13,7 @@
     </div>
   </nav>  
   <div class="main-body">
-    <router-outlet></router-outlet>
+    <app-search-result></app-search-result>
   </div>
   <!-- <footer>
     my footer
@@ -31,8 +32,8 @@
           <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>  &nbsp; Account
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="#">Option 1</a></li>
-          <li><a class="dropdown-item" href="#">Option 2</a></li>
+          <li><a class="dropdown-item" [routerLink]="['/acc/profile']" >Profile</a></li>
+          <li><a class="dropdown-item" [routerLink]="['/acc/saved']">Bookmarks</a></li>
           <li><hr class="dropdown-divider"></li>
           <li><a class="dropdown-item" (click)="logout()">Log out</a></li>
         </ul>
