1706_before adding jwt

--- a/client/src/app/components/search-result.component.html
+++ b/client/src/app/components/search-result.component.html
@@ -1,5 +1,6 @@
 
 <body>
+  <button (click)="save()" >Test</button>
   <div class="mycontainer">
     <div class="container d-flex flex-column">
     <!-- <div class="cardbody"> -->
