--- a/client/src/app/components/saved-result.component.html
+++ b/client/src/app/components/saved-result.component.html
@@ -1,13 +1,18 @@
 <div class="container">
-    <div class="row">
-        <div class="col-4" *ngFor="let r of bookmarkedPlaces">
+    <div class="colbox" *ngFor="let c of collections">
+      <div class="row">
+        <div class="row">
+          {{c.collectionName}}
+        </div>
+        <div class="col-4" *ngFor="let r of c.restaurants">
             <div class="card">
                 <img src="../../assets/placeholder-image.jpg" class="card-img-top">
                 <div class="card-body">
-                  <h2 class="card-title">Card title</h2>
+                  <h2 class="card-title">{{r.name}}</h2>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
         </div>
+    </div>
     </div>
 </div>
