--- a/client/src/app/components/search-result.component.css
+++ b/client/src/app/components/search-result.component.css
@@ -23,6 +23,7 @@
   justify-content: center;
   padding-top: 5%;
   background-color: whitesmoke;
+  border-style: solid;
 }
 
 .card-hover-effect {
