--- a/client/src/app/components/search.component.css
+++ b/client/src/app/components/search.component.css
@@ -29,3 +29,16 @@ body{
     height: 45px;
 }
 
+.container{
+    border-style: solid;
+    height: 100%;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white
+}
+
+.searchbox{
+    width: 100%;
+}
