--- a/client/src/app/components/search.component.html
+++ b/client/src/app/components/search.component.html
@@ -1,5 +1,6 @@
 <body>
   <div class="container">
+   <div class="searchbox">
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="row d-flex justify-content-center">
         <div class="col-3">
@@ -26,4 +27,5 @@
       </div>
     </form>
    </div>
+  </div>
 </body>
